factored out the color selector into a directive

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -101,34 +101,11 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                     <!-- MGS: The way my selector works currently is thas they clickable choices are actually hidden radio buttons with a styled label which contains a preview image. The buttons themselves can be hidden using css. I wrote a sample repeatable tab to reflect that. If you think that is too difficult to work around, please leave a comment and we can rethink the approach -->
                     <div id="{{property.image_type}}" class="tab-pane tab-pane-style" ng-repeat="property in main.schema">
                         <h3 class="property-label">{{property.image_type_label}}</h3>
-                        <div class="color_wrapper">
-                            <div class="desk_hide color_drop">&nbsp;</div>
-                            <div class="color-thumbs" ng-show="!property.image_type.endsWith('nose') && !property.image_type.endsWith('glasses')">
-                                <div ng-repeat="value in property.values | unique: 'color_code'">
-                                    <input id="radio_btn_color_{{value.image_id}}_{{value.color_name}}" type="radio" ng-value="value.color_code" name="radio_color_{{property.image_type}}" ng-bind="main.imageUrls[main.currentAvatar.images[$parent.$index]].color_code" ng-model="main.colorCodes[property.image_type]"></input>
-                                    <label class="color-thumb" ng-style="{'background-color': value.color_code}" for="radio_btn_color_{{value.image_id}}_{{value.color_name}}"></label>
-                                </div>
-                                <!--                         <input id="radio_btn_color_2" type="radio" value="red" name="radio_color"></input>
-                                        <label class="color-thumb" ng-style="{'background-color': 'red'}" for="radio_btn_color_2" ></label> -->
-                                <!--                         <div class="color-thumb" ng-style="{'background-color': 'blue'}"></div>
-                                        <div class="color-thumb" ng-style="{'background-color': 'red'}"></div> -->
-                                <div class="clearfix"></div>
-                                {{JSON.stringify(main.colorCodes)}}
-                            </div>
-                        </div>
-<!--                         <div class="icon-scroller-outer">
-                            <div class="icon-scroller-inner">
-                                <div class="img_wrapper">
-                                    <div ng-repeat="value in property.values | filter:{color_code: main.colorCodes[property.image_type]}">
-                                        <input id="radio_btn_{{value.image_id}}" type="radio" value="{{value.image_id}}" name="radio_{{property.image_type}}" ng-model="main.currentAvatar.images[$parent.$index]"></input>
-                                        <label for="radio_btn_{{value.image_id}}" class="body-part-label">
-                                            <img height="" ng-src="{{value.icon_location}}">
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
-                        <body-property-options property="property" color-codes="main.colorCodes" image-list="main.currentAvatar.images[$index]"">
+
+                        <body-property-colors property="property" color-codes="main.colorCodes">
+                        </body-property-colors>
+
+                        <body-property-options property="property" color-codes="main.colorCodes" current-image-id="main.currentAvatar.images[$index]">
                         </body-property-options>
 
                         <div id="nameGender-mobile" class="tab-pane-style">
