--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -99,6 +99,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                         <div class="proceedBtn">Proceed to the Body when ready!</div>
                     </div>
                     <!-- MGS: The way my selector works currently is thas they clickable choices are actually hidden radio buttons with a styled label which contains a preview image. The buttons themselves can be hidden using css. I wrote a sample repeatable tab to reflect that. If you think that is too difficult to work around, please leave a comment and we can rethink the approach -->
+<!--                     <avatar-part-selector-panes schema="main.schema" color-codes="main.colorCodes" current-avatar="main.currentAvatar"></avatar-part-selector-panes> -->
                     <div id="{{property.image_type}}" class="tab-pane tab-pane-style" ng-repeat="property in main.schema">
                         <h3 class="property-label">{{property.image_type_label}}</h3>
 
