finished fixing the issue with the 'characters ready' link. Replaced ng-href with href

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -180,7 +180,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
             </ul>
             <div class="w-col-md-4">
                 <!--added div-->
-                <a ng-href="#" target="_self" ng-click="main.saveChanges()" class="footer-btn">My characters are ready</a>
+                <a href="" target="_self" ng-click="main.saveChanges()" class="footer-btn">My characters are ready</a>
 <!--                 <a href="/previewbook" class="skip-btn">SKIP TO PREVIEW THE BOOK</a> -->
             </div>
         </div>
