--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1561,3 +1561,13 @@ font-size:20px;
 .icon-scroller-inner .img_wrapper label {
     background-color: transparent !important;
 }
+
+.select-css {
+    label {
+        height: auto !important;
+        margin: 0 !important;
+    }
+    input:checked + label {
+        border: 1px solid red !important;
+    }
+}
