created a div for mobile hook on the main layout, slyled it with media query. Created a function on main controller to read the display css property and decide whether layout is mobile. Created a utility function on main controller to activate first or second tab based on mobile or desktop layout. Used a signal sender and receiver to signal the tab change. Signal $emits were places in the carousel watcher, as well as tabPanes directive

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1542,6 +1542,8 @@ header .user-avatar img {
   display: none; }
 
 @media (max-width: 749px) {
+  #mobile-hook {
+    display: none; }
   .name-gender-tab-control {
     display: none; }
   .salutation-wrapper {
