a few small link path corrections

--- a/public/partials/landing.html
+++ b/public/partials/landing.html
@@ -82,7 +82,7 @@
                 <a href="javascript:void(0);" class="slider-next"></a>
             </div>
         </div>
-        <a href="javascript:void(0);" class="full-btn">Buy Now</a>
+        <a href="/avatarbuilder" class="full-btn">Buy Now</a>
     </section>
     <section class="promo3">
         <h2>Make your family avatars fast n easy</h2>
