--- a/public/partials/pfpreview_1.html
+++ b/public/partials/pfpreview_1.html
@@ -36,7 +36,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
 <!-- bottom part -> menu & buttons -->
 <section id="bottomPartWrapper">
     <div class="container">
-        <div class="w-col-md-4"><a target="_self" href="/avatarbuilder" class="footer-btn edit-btn">Edit Avatar</a></div>
+        <div class="w-col-md-4 left-mobile-button"><a target="_self" href="/avatarbuilder" class="footer-btn edit-btn">Edit Avatar</a></div>
         <!-- steps menu -->
         <ul class="steps-menu w-col-md-4">
             <li class="done">
@@ -55,7 +55,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                 <span class="avatar-label">BOOK</span>
             </li>
         </ul>
-        <div class="w-col-md-4">
+        <div class="w-col-md-4 right-mobile-button">
             <a target="_self" ng-click="preview.submitPreview()" href="" class="footer-btn">Continue</a>
 <!--             <a href="javascript:void(0);" class="skip-btn">SKIP TO PREVIEW THE BOOK</a> -->
         </div>
