--- a/public/partials/pfpreview_3.html
+++ b/public/partials/pfpreview_3.html
@@ -49,7 +49,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
 <!-- bottom part -> menu & buttons -->
 <section id="bottomPartWrapper">
     <div class="container">
-        <div class="w-col-md-4"><a target="_self" href="/avatarbuilder" class="footer-btn edit-btn">Edit Avatar</a></div>
+        <div class="w-col-md-4 left-mobile-button"><a target="_self" href="/avatarbuilder" class="footer-btn edit-btn">Edit Avatar</a></div>
         <!-- steps menu -->
         <ul class="steps-menu w-col-md-4">
             <li class="done">
@@ -68,7 +68,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                 <span class="avatar-label">BOOK</span>
             </li>
         </ul>
-        <div class="w-col-md-4">
+        <div class="w-col-md-4 right-mobile-button">
 <!--             <a target="_self" href="javascript:alert('This will be linked to payment')" ng-click="alert('This will be linked to payment')" class="footer-btn">Buy the Book</a> -->
   <form ng-if="preview.priceandcurrencyloaded" action="/charge" method="POST">
 <script
