hiddent the coutry selector on book preview page

--- a/public/partials/pfpreview_2.html
+++ b/public/partials/pfpreview_2.html
@@ -61,7 +61,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
             </div>
         </div>
         <div class="flipbook-info-container">
-            <div class="destination-container">
+            <div style="display: none;" class="destination-container">
                
                 <img src="/img/destination_title_bg.png" class="title" />
          
