--- a/public/partials/pfpreview_1.html
+++ b/public/partials/pfpreview_1.html
@@ -27,7 +27,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
             <a href="javascript:void(0);"><img src="/img/social_fb.png" alt="" /></a>
             <a href="javascript:void(0);"><img src="/img/social_twitter.png" alt="" /></a>
             <a href="javascript:void(0);"><img src="/img/social_rss.png" alt="" /></a>
-            <a href="javascript:void(0);"><img src="/img/social_download.png" alt="" /></a>
+            <a ng-href="{{'https://pfstories.com/preview' + '/' + preview.previewFolderName + '/PREVIEW.PNG'}}" download><img src="/img/social_download.png" alt="" /></a>
         </div>
         <div class="character-all-photo"><img ng-src="{{'https://pfstories.com/preview' + '/' + preview.previewFolderName + '/PREVIEW.PNG'}}" src=""></div>
     </div>
