changed link text from 'continue' to 'preview my book'

--- a/public/partials/pfpreview_1.html
+++ b/public/partials/pfpreview_1.html
@@ -56,7 +56,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
             </li>
         </ul>
         <div class="w-col-md-4 right-mobile-button">
-            <a target="_self" ng-click="preview.submitPreview()" href="" class="footer-btn">Continue</a>
+            <a target="_self" ng-click="preview.submitPreview()" href="" class="footer-btn">Preview my book</a>
 <!--             <a href="javascript:void(0);" class="skip-btn">SKIP TO PREVIEW THE BOOK</a> -->
         </div>
     </div>
