added default names, added next avatar button

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -84,8 +84,8 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
                 <div class="tab-btn-clear">
                     <a ng-click="main.deleteAvatarsConfirm()" href="" target="_self">Clear All</a><!--added class-->
                 </div>
-                <div style="display: none;" class="tab-btn-save">
-                    <a href="" ng-click="main.saveChanges('alert');">Save Changes</a><!--added class-->
+                <div class="tab-btn-save">
+                    <a href="" ng-click="main.advanceToNextAvatar();">Next avatar</a><!--added class-->
                 </div>
             </div>
         </div>
