--- a/public/scss/kario_css.scss
+++ b/public/scss/kario_css.scss
@@ -51,6 +51,10 @@
 	//Character Tab Styles
 	@media (max-width: 749px){ 
 
+	.prev-next-buttons {
+		left: 40px !important;
+	}
+
 	.left-mobile-button {
 		width: 45% !important;
 		float: left !important;
