--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1594,4 +1594,12 @@ font-size:20px;
         user-select: none;
         pointer-events: all;
     }
+    .ddd {
+        cursor: default;
+        background-color: gray;
+    }
+    .ddd {
+        cursor: default;
+        background-color: gray;
+    }
 }
