removed the 3d feature from the avatar slider

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -112,7 +112,7 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
             </div>
             <!-- slides -->
             <div class="carousel-demo" style="width: 100%;">
-                <ul rn-carousel rn-carousel-transition="hexagon" rn-carousel-controls rn-carousel-index="main.carousel_index" class="carousel3">
+                <ul rn-carousel rn-carousel-controls rn-carousel-index="main.carousel_index" class="carousel3">
                    <li ng-repeat="index in main.getHelperArray(main.familyType)">
                         <ul>
                             <li>
